<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tindie</string>
    <string name="settings">Settings</string>
    <string name="new_actvity">Monitor</string>
    <string name="routes">Routes</string>
    <string name="workouts">Workouts</string>
    <string name="history">History</string>
    <string name="slider">Slider</string>
    <string name="progress">Progress</string>
    <string name="slide_btn">Slide Button</string>
    <string name="radio_btn">Radio</string>
    <string name="checkbox">Checkbox</string>
    <string name="selected">Selected</string>
    <string name="tab">Tab</string>
    <string name="button">Button</string>
    
    <!-- Login -->
    <string name="baby_info">Babys Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    
</resources>