<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.chatt.Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:src="@drawable/ic_launcher" />  
        <Button
        android:id="@+id/btCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:text="Take Photo" />                  
		<!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnFb"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_fb" />

            <Button
                android:id="@+id/btnTw"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:background="@drawable/btn_tw" />
        </LinearLayout>
        -->
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_5dp"
            android:text="@string/baby_info"
            android:textSize="@dimen/txt_14sp" />

        <EditText
            android:id="@+id/editText1"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/name" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText1"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_username"
            android:inputType="number"
            android:hint="@string/age">
        </EditText>
		        <EditText
            android:id="@+id/editText1"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/weight" >

            <requestFocus />
        </EditText>
        <!-- 
        <EditText
            android:id="@+id/editText1"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>
         -->
        <Button
            android:id="@+id/btnRegSave"
            style="@style/btn_white_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
		
        <!--
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_20dp"
            android:background="@color/white"
            android:padding="@dimen/pad_5dp"
            android:text="@string/log_in"
            android:textColor="@color/tab_bg_yellow"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/pad_5dp"
            android:text="@string/forgot_my_pwd"
            android:textColor="@color/main_color_gray_dk"
            android:textSize="@dimen/txt_14sp" />
        -->

    </LinearLayout>

</ScrollView>